--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "prop-types": "^15.8.1",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-icons": "^1.3.0",
-    "@sitecore-search/react": "2.5.4-experimental-a5b0ce0b",
-    "@sitecore-search/ui": "2.5.4-experimental-a5b0ce0b",
+    "@sitecore-search/react": "2.6.0-alpha.0",
+    "@sitecore-search/ui": "2.6.0-alpha.0",
     "decompress": "^4.2.1",
     "decompress-targz": "^4.1.1",
     "lucide-react": "^0.436.0",
@@ -25,7 +25,7 @@
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@sitecore-search/cli": "2.5.4-experimental-a5b0ce0b",
+    "@sitecore-search/cli": "2.6.0-alpha.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "prettier": "^2.8.4",
