--- a/package.json
+++ b/package.json
@@ -10,28 +10,40 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@sitecore-search/react": "2.1.1",
-    "@sitecore-search/ui": "2.1.1",
     "prop-types": "^15.8.1",
+    "@radix-ui/react-accordion": "^1.2.0",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@sitecore-search/react": "2.6.0-alpha.0",
+    "@sitecore-search/ui": "2.6.0-alpha.0",
+    "decompress": "^4.2.1",
+    "decompress-targz": "^4.1.1",
+    "lucide-react": "^0.436.0",
+    "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.2",
-    "react-select": "^5.7.4",
-    "react-toggle-dark-mode": "^1.1.1",
-    "styled-components": "^6.0.4"
+    "react-router-dom": "^6.8.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@sitecore-search/cli": "2.1.1",
-    "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "eslint": "^8.45.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-react": "^7.32.2",
+    "@sitecore-search/cli": "2.6.0-alpha.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "prettier": "^3.0.0",
-    "vite": "^4.4.5"
+    "prettier": "^2.8.4",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "fs-extra": "^11.1.1",
+    "@trivago/prettier-plugin-sort-imports": "^3.2.0",
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "8.6.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "typescript": "^5.0.4",
+    "vite": "5.2.6"
   }
 }
